Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/shephertz/AppWarpDocs" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/shephertz/AppWarpDeveloper" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/shephertz/AppWarpDocs/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/shephertz/AppWarpDocs/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/shephertz/AppWarpDeveloper/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/shephertz/AppWarpDeveloper/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -39,7 +39,9 @@
         <ul></ul>
       </nav>
       <section>
-        <h1>AppWarpDocs</h1>
+        <h2>AppWarp Developer</h2>
+
+<p><strong>Select your platform</strong></p>
 
 <p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Android-home"><img src="http://appwarp.shephertz.com/images/android-developer-logo.png" alt=""></a></p>
 
