Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Appwarpdocs by shephertz</title>
+    <title>Appwarp Developer Documentation by shephertz</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Appwarpdocs</h1>
+        <h1>Appwarp Developer Documentation</h1>
         <p></p>
       </header>
 
@@ -39,7 +39,7 @@
         <ul></ul>
       </nav>
       <section>
-        <h2>AppWarp Developer</h2>
+        <h2>AppWarp Developer Home</h2>
 
 <p><strong>Select your platform</strong></p>
 
@@ -55,7 +55,7 @@
 
 <p><a href="https://github.com/shephertz/AppWarpDocs/wiki/HTML5-Home"><img src="http://appwarp.shephertz.com/images/java_script.png" alt=""></a></p>
 
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Cocos2d-Home">https://github.com/shephertz/AppWarpDocs/wiki/Cocos2d-Home</a></p>
+<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Cocos2d-Home"><img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png" alt=""></a></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/shephertz">shephertz</a></p>
