Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,65 +4,72 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Appwarp Developer Documentation by shephertz</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-      <header>
-        <h1>Appwarp Developer Documentation</h1>
-        <p></p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/shephertz/AppWarpDeveloper" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/shephertz/AppWarpDeveloper/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/shephertz/AppWarpDeveloper/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
+      <header>
+        <h1 class="header">Appwarp Developer Documentation</h1>
+        <p class="header"></p>
+
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/shephertz/AppWarpDeveloper/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/shephertz/AppWarpDeveloper/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/shephertz/AppWarpDeveloper">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/shephertz">shephertz</a></p>
+
+
+      </header>
       <section>
-        <h2>AppWarp Developer Home</h2>
+        <h2>AppWarp Developer</h2>
 
 <p><strong>Select your platform</strong></p>
 
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Android-home"><img src="http://appwarp.shephertz.com/images/android-developer-logo.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Ios-Home"><img src="http://appwarp.shephertz.com/images/Ios.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Unity-Home"><img src="http://appwarp.shephertz.com/images/unity3d-download.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Windows-Phone-Home"><img src="http://appwarp.shephertz.com/images/windows.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Xamarin-Home"><img src="http://appwarp.shephertz.com/images/monotouch-monoroid-download.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/HTML5-Home"><img src="http://appwarp.shephertz.com/images/java_script.png" alt=""></a></p>
-
-<p><a href="https://github.com/shephertz/AppWarpDocs/wiki/Cocos2d-Home"><img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png" alt=""></a></p>
+<table>
+<tr>
+<td>
+        <img src="http://appwarp.shephertz.com/images/android-developer-logo.png">
+</td>
+        <td>
+        <img src="http://appwarp.shephertz.com/images/Ios.png">
+</td>
+        <td>
+        <img src="http://appwarp.shephertz.com/images/windows.png">
+</td>        
+    </tr>
+<tr>
+<td>
+        <img src="http://appwarp.shephertz.com/images/unity3d-download.png">
+</td>
+        <td>
+        <img src="http://appwarp.shephertz.com/images/monotouch-monoroid-download.png">
+</td>
+        <td>
+        <img src="http://appwarp.shephertz.com/images/java_script.png">
+</td>        
+    </tr>
+<tr>
+<td>
+        <img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png">
+</td>       
+        
+    </tr>
+</table>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/shephertz">shephertz</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
