--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,18 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Appwarp Developer Documentation</h1>
-        <p class="header"></p>
+        <h1>Appwarp Developer Documentation</h1>
+        <p></p>
+
+        <p class="view"><a href="https://github.com/shephertz/AppWarpDeveloper">View the Project on GitHub <small>shephertz/AppWarpDeveloper</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/shephertz/AppWarpDeveloper/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/shephertz/AppWarpDeveloper/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/shephertz/AppWarpDeveloper">View On GitHub</a></li>
+          <li><a href="https://github.com/shephertz/AppWarpDeveloper/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/shephertz/AppWarpDeveloper/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/shephertz/AppWarpDeveloper">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/shephertz">shephertz</a></p>
-
-
       </header>
       <section>
         <h2>AppWarp Developer</h2>
@@ -37,39 +35,46 @@
 <table>
 <tr>
 <td>
-        <img src="http://appwarp.shephertz.com/images/android-developer-logo.png">
-</td>
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Android-home">
+   <img src="http://appwarp.shephertz.com/images/android-developer-logo.png"></a>        
+        </td>
         <td>
-        <img src="http://appwarp.shephertz.com/images/Ios.png">
-</td>
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Ios-Home">
+   <img src="http://appwarp.shephertz.com/images/Ios.png"></a>        
+        </td>
         <td>
-        <img src="http://appwarp.shephertz.com/images/windows.png">
-</td>        
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Cocos2d-Home">
+   <img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png"></a>        
+        </td>         
     </tr>
 <tr>
 <td>
-        <img src="http://appwarp.shephertz.com/images/unity3d-download.png">
-</td>
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Unity-Home">
+   <img src="http://appwarp.shephertz.com/images/unity3d-download.png"></a>        
+        </td>
         <td>
-        <img src="http://appwarp.shephertz.com/images/monotouch-monoroid-download.png">
-</td>
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Windows-Phone-Home">
+   <img src="http://appwarp.shephertz.com/images/windows.png"></a>        
+        </td>  
         <td>
-        <img src="http://appwarp.shephertz.com/images/java_script.png">
-</td>        
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/HTML5-Home">
+   <img src="http://appwarp.shephertz.com/images/java_script.png"></a>        
+        </td>         
     </tr>
 <tr>
 <td>
-        <img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png">
-</td>       
-        
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Xamarin-Home">
+   <img src="http://appwarp.shephertz.com/images/monotouch-monoroid-download.png"></a>        
+        </td>   
     </tr>
 </table>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/shephertz">shephertz</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
