--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
       </header>
       <section>
-        <h2>AppWarp Developer</h2>
+        <h2>
+<a name="appwarp-developer" class="anchor" href="#appwarp-developer"><span class="octicon octicon-link"></span></a>AppWarp Developer</h2>
 
 <p><strong>Select your platform</strong></p>
 
@@ -71,6 +72,10 @@
         <td>
 <a href="https://github.com/shephertz/AppWarpDocs/wiki/J2ME-Home">
    <img src="http://appwarp.shephertz.com/images/J2ME.png"></a>        
+        </td>  
+        <td>
+<a href="https://github.com/shephertz/AppWarpDocs/wiki/Java-Home">
+   <img src="http://appwarp.shephertz.com/images/java.png"></a>        
         </td>          
     </tr>
 </table>
