--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
    <img src="http://appwarp.shephertz.com/images/windows.png"></a>        
         </td>  
         <td>
-<a href="https://github.com/shephertz/AppWarpDeveloper/wiki/HTML5-Home">
-   <img src="http://appwarp.shephertz.com/images/java_script.png"></a>        
-        </td>         
+<a href="https://github.com/shephertz/AppWarpDeveloper/wiki/AS3-Home">
+   <img src="http://wwwimages.adobe.com/www.adobe.com/downloadcenter/images/flash/flash_128.jpg"></a>       
+        </td>                 
     </tr>
 <tr>
 <td>
@@ -74,15 +74,19 @@
    <img src="https://lh4.googleusercontent.com/-s1DU2gzJuys/UQgPnEX75rI/AAAAAAAArzY/bbLwZSkM7jo/s800/cocos2d-iphone-logo.png"></a>                
         </td>  
         <td>
-<a href="https://github.com/shephertz/AppWarpDeveloper/wiki/J2ME-Home">
-   <img src="http://appwarp.shephertz.com/images/J2ME.png"></a>                 
-        </td>          
+<a href="https://github.com/shephertz/AppWarpDeveloper/wiki/HTML5-Home">
+   <img src="http://appwarp.shephertz.com/images/java_script.png"></a>        
+        </td>                   
     </tr>
 <tr>
 <td>
 <a href="https://github.com/shephertz/AppWarpDeveloper/wiki/Java-Home">
    <img src="http://appwarp.shephertz.com/images/java.png"></a>       
         </td> 
+        <td>
+<a href="https://github.com/shephertz/AppWarpDeveloper/wiki/J2ME-Home">
+   <img src="http://appwarp.shephertz.com/images/J2ME.png"></a>                 
+        </td>        
     </tr>
 </table>
       </section>
